Added header img to `Game` object
